linked pages & simple decoration

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/base.js') }}"></script>
+    {% block head %}{% endblock %}
 </head>
 <body>
 <!-- navbar -->
