--- a/app/templates/questionnaire_create_question.html
+++ b/app/templates/questionnaire_create_question.html
@@ -1,14 +1,28 @@
 {% extends "workflow.html" %}
 
 {% block content_step %}
-	<h1 class="page-header">Step 2/2 : Add Questions</h1>
-	<input type="button" onclick="add_question(0)" value="Single choice"/>
-	<input type="button" onclick="add_question(1)" value="Multiple choice"/>
-	<input type="button" onclick="add_question(2)" value="True or false"/>
-	<input type="button" onclick="add_question(3)" value="Essay"/>
-	<form method="POST">
-	<div id="ques_list">
-	</div>
-	<input type="submit" value="submit"/>
-	</form>
+  <h1 class="page-header">Step 2/2 : Add Questions</h1>
+
+  <form method="POST">
+    <div id="ques_list">
+    </div>
+    <button class="btn btn-default" type="submit">Submit</button>
+  </form>
+
+  <div class="col-sm-3 col-md-2 sidebar-right">
+    <ul class="nav nav-stacked">
+      <li>
+        <button class="btn btn-default" onclick="add_question(0)">Single choice</button>
+      </li>
+      <li>
+        <button class="btn btn-default" onclick="add_question(1)">Multiple choice</button>
+      </li>
+      <li>
+      <button class="btn btn-default" onclick="add_question(2)">True or false</button>
+      </li>
+      <li>
+        <button class="btn btn-default" onclick="add_question(3)">Essay</button>
+      </li>
+    </ul>
+  </div>
 {% endblock %}
