--- a/app/templates/release.html
+++ b/app/templates/release.html
@@ -13,54 +13,62 @@
 <form action="" method="post" name="release">
     <div class="form-group row">
         <label for="start_time" class="control-label col-md-3">Start time</label>
-        <div class="input-group date form_datetime col-md-5" data-date-format="yyyy-mm-dd hh:ii:ss">
-            <input type="text" class="form-control"
-                   id="start_time" name="start_time"
-                   required>
-            <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+        <div class="col-md-5">
+            <div class="input-group date form_datetime" data-date-format="yyyy-mm-dd hh:ii:ss">
+                <input type="text" class="form-control"
+                       id="start_time" name="start_time"
+                       required>
+                <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+            </div>
         </div>
     </div>
 
     <div class="form-group row">
         <label for="end_time" class="control-label col-md-3">End time</label>
-        <div class="input-group date form_datetime col-md-5" data-date-format="yyyy-mm-dd hh:ii:ss">
-            <input type="text" class="form-control"
-                   id="end_time" name="end_time"
-                   required>
-            <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+        <div class="col-md-5">
+            <div class="input-group date form_datetime" data-date-format="yyyy-mm-dd hh:ii:ss">
+                <input type="text" class="form-control"
+                       id="end_time" name="end_time"
+                       required>
+                <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+            </div>
         </div>
     </div>
 
     <div class="form-group row">
         <label for="is_allow_anonymous" class="control-label col-md-3">Allow anonymous</label>
-        <div class="input-group col-md-5">
+        <div class="col-md-5">
             <input type="checkbox" id="is_allow_anonymous" name="is_allow_anonymous" checked>
         </div>
     </div>
 
     <div class="form-group row">
         <label for="limit_num_participants" class="control-label col-md-3">Limit number of deliveries for each participant</label>
-        <div class="input-group col-md-5">
+        <div class="col-md-5">
             <input type="text" class="form-control" id="limit_num_participants" name="limit_num_participants" placeholder="Leave blank if no limits">
         </div>
     </div>
 
     <div class="form-group row">
         <label for="limit_num_ip" class="control-label col-md-3">Limit number of deliveries for IP address</label>
-        <div class="input-group col-md-5">
+        <div class="col-md-5">
             <input type="text" class="form-control" id="limit_num_ip" name="limit_num_ip" placeholder="Leave blank if no limits">
         </div>
     </div>
 
     <div class="form-group row">
         <label for="special_participants" class="control-label col-md-3">Special_participants</label>
-        <div class="input-group col-md-5">
+        <div class="col-md-5">
             <textarea rows="8" class="form-control" id="special_participants" name="special_participants" placeholder="Enter username split by comma"></textarea>
         </div>
     </div>
 
-    <button class="btn btn-primary col-md-offset-3" type="submit">Release
-    </button>
+    <div class="form-group row">
+        <div class="col-md-offset-3 col-md-5">
+            <button class="btn btn-primary" type="submit">Release
+            </button>
+        </div>
+    </div>
 </form>
 
 <script type="text/javascript">
