--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,25 +1,49 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h4>Register</h4>
-<form action="" method="post" name="login">
+<div class="col-md-offset-3">
+<h1>Register</h1>
+<br/>
+
+<form method="post">
 	{{form.hidden_tag()}}
-	<p>
-		{{form.username.label}}
-		{{form.username}}
-	</p>
-	<p>
-		{{form.password.label}}
-		{{form.password}}
-	</p>
-	<p>
-		{{form.password_again.label}}
-		{{form.password_again}}
-	</p>
-	<p>
-		{{form.mail.label}}
-		{{form.mail}}
-	</p>
-	<p><input type="submit" value="Register"></p>
+
+    <div class="form-group row">
+        <label for="username" class="control-label col-md-3">{{form.username.label}}</label>
+        <div class="col-md-4">
+        	{{form.username(class_='form-control')}}
+        </div>
+    </div>
+		
+		
+	<div class="form-group row">
+        <label for="password" class="control-label col-md-3">{{form.password.label}}</label>
+        <div class="col-md-4">
+        	{{form.password(class_='form-control')}}
+        </div>
+    </div>
+
+	<div class="form-group row">
+        <label for="password_again" class="control-label col-md-3">{{form.password_again.label}}</label>
+        <div class="col-md-4">
+        	{{form.password_again(class_='form-control')}}
+        </div>
+    </div>
+
+	<div class="form-group row">
+        <label for="mail" class="control-label col-md-3">{{form.mail.label}}</label>
+        <div class="col-md-4">
+        	{{form.mail(class_='form-control')}}
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-md-offset-3 col-md-4">
+            <button class="btn btn-primary" type="submit">Register
+            </button>
+        </div>
+    </div>
 </form>
+</div>
+
 {% endblock %}
