--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -97,19 +97,19 @@
 			<td  class="col-md-4"><h4>Manipulation</h4></td>
 			</tr>
 
-			{% for i in ques_list_filled%}
-			<tr id="{{i.id}}" class="row fluid">
+			{% for ans in ques_ans_list%}
+			<tr id="{{ans.questionnaire.id}}" class="row fluid">
 
 			<td class="col-md-4">
 			<span id="title" class="title">
 
-			<a href="{{url_for('questionnaire', questionnaire_id=i.id)}}">{{i.title}}</a>
+			<a href="{{url_for('questionnaire', questionnaire_id=ans.questionnaire.id)}}">{{ans.questionnaire.title}}</a>
 
 			</span>
 			</td>
-			<td class="col-md-4">{{i.date.strftime("%Y-%m-%d %H:%M")}}</td>
+			<td class="col-md-4">{{ans.date.strftime("%Y-%m-%d %H:%M")}}</td>
 			<td>
-			{{i.status}}
+			{{ans.questionnaire.status}}
 			</td>
 			<td class="col-md-4 center">
 
