--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -10,8 +10,10 @@
 
     
 
-    <div ><h1>Questionnaire You Created:<a class="btn btn-primary btn-lg pull-right" role="button">Create a new questionnaire</a></h1></div>
-
+    <div ><h1>Questionnaire Created:
+    	{%if not g.user.isAdmin %}
+    	<a class="btn btn-primary btn-lg pull-right" role="button" href="{{url_for('create')}}">Create Questionnaire</a>
+    	{% endif %}</h1></div>
 
 
 	
@@ -20,41 +22,40 @@
 			<tbody val="ttt">
 			<tr class="thead_td" class="row fluid">
 
-			<td  class="sequence" id="proj_title"><h4>title</h4></td>
-			<td  class="sequence" id="proj_created"><h4>create time</h4></td>
+			<td  class="sequence" id="proj_title"><h4>Title</h4></td>
+			<td  class="sequence" id="proj_created"><h4>Create Time</h4></td>
 
-			<td  class="sequenceup" id="proj_start"><h4>start time</h4></td>
-			<td  class="sequenceup" id="proj_end"><h4>end time</h4></td>
+			<td  class="sequenceup" id="proj_start"><h4>Start Time</h4></td>
+			<td  class="sequenceup" id="proj_end"><h4>End Time</h4></td>
 
 
-			<td ><h4>status</h4></td>
-			<td  class="alignc"><h4>reply number</h4></td>
-			<td ><h4>manipulation</h4></td>
+			<td ><h4>Status</h4></td>
+			<td  class="alignc"><h4>Reply Number</h4></td>
+			<td ><h4>Manipulation</h4></td>
 			</tr>
 
 
 
 
 
-			{% for i in ques_list_created %}
+			{% for i in range(0,ques_list_created|length) %}
 
-
-			<tr id="{{i.id}}">
+			<tr id="{{ques_list_created[i].id}}">
 
 			<td>
 			<span id="title" class="title">
 
-			{{i.title}}
+			<a href="{{url_for('questionnaire', questionnaire_id=ques_list_created[i].id)}}">{{ques_list_created[i].title}}</a>
 
 			</span>
 			</td>
-			<td>{{i.create_time}}</td>
-			<td>{{i.start_time}}</td>
-			<td>{{i.end_time}}</td>
+			<td>{{ques_list_created[i].create_time.strftime("%Y-%m-%d %H:%M")}}</td>
+			<td>{{ques_list_releases[i].start_time.strftime("%Y-%m-%d %H:%M") if ques_list_releases[i] else "Not yet"}}</td>
+			<td>{{ques_list_releases[i].end_time.strftime("%Y-%m-%d %H:%M") if ques_list_releases[i] else "Not yet"}}</td>
 			<td>
-				{{i.status}}
+				{{ques_list_created[i].status}}
 			</td>
-			<td class="alignc" id="rspd_count_53b14bc8f7405b3c14ecd22e" pid="53b14bc8f7405b3c14ecd22e">{{i.reply_sum}}</td>
+			<td class="alignc" id="rspd_count_53b14bc8f7405b3c14ecd22e" pid="53b14bc8f7405b3c14ecd22e">{{ques_list_created[i].reply_sum}}</td>
 			<td>
 
 
@@ -83,36 +84,34 @@
 	</div>
 	
 	<br/>
-	    <h1>Questionnaire You Answered:</h1>
+	    <h1>Questionnaire Answered:</h1>
 	<div id="ques_list_filled">
 		<table id="proj_list" class="table">
 			<tbody val="ttt">
 			<tr class="row fluid">
 
-			<td  class="col-md-4" id="proj_title"><h4>title</h4></td>
-			<td  class="col-md-4" id="proj_created"><h4>alive time</h4></td>
+			<td  class="col-md-4" id="proj_title"><h4>Title</h4></td>
 
-			<td  class="col-md-4" id="proj_updated"><h4>fill time</h4></td>
+			<td  class="col-md-4" id="proj_updated"><h4>Fill Time</h4></td>
 
 
-			<td  class="col-md-4"><h4>status</h4></td>
-			<td  class="col-md-4"><h4>manipulation</h4></td>
+			<td  class="col-md-4"><h4>Status</h4></td>
+			<td  class="col-md-4"><h4>Manipulation</h4></td>
 			</tr>
 
-			{% for i in ques_list_filled%}
-			<tr id="{{i.id}}" class="row fluid">
+			{% for ans in ques_ans_list%}
+			<tr id="{{ans.questionnaire.id}}" class="row fluid">
 
 			<td class="col-md-4">
 			<span id="title" class="title">
 
-			{{i.title}}
+			<a href="{{url_for('questionnaire', questionnaire_id=ans.questionnaire.id)}}">{{ans.questionnaire.title}}</a>
 
 			</span>
 			</td>
-			<td class="col-md-4">{{i.start_time}}</td>
-			<td class="col-md-4">{{i.filled_time}}</td>
+			<td class="col-md-4">{{ans.date.strftime("%Y-%m-%d %H:%M")}}</td>
 			<td>
-			{{i.status}}
+			{{ans.questionnaire.status}}
 			</td>
 			<td class="col-md-4 center">
 
