--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="col-md-offset-4">
-<h1>Sign In</h1>
+<h1>Login</h1>
 <br/>
 
 <form method="post">
@@ -25,7 +25,7 @@
 
 	<div class="form-group row">
         <div class="col-md-offset-2 col-md-4">
-            <button class="btn btn-primary" type="submit">Sign In
+            <button type="submit" class="btn btn-primary">Login
             </button>
         </div>
     </div>
