--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,7 +26,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/index.html" style="font-size:24px;color: #ffffff">Plask</a>
+            <a class="navbar-brand" href="/" style="font-size:24px;color: white">Plask</a>
         </div>
 
         <div class="navbar-collapse collapse">
@@ -35,6 +35,18 @@
                     <a href="/">Home</a>
                 </li>
             </ul>
+            {% if g.user %}
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="/">{{ g.user.username }}</a></li>
+                <li><a href="/questionnaire/create"><span class="glyphicon glyphicon-edit"></span></a></li>
+                <li><a href="/logout">Logout</a></li>
+            </ul>
+            {% else %}
+            <form class="navbar-form navbar-right" role="form">
+                <a class="btn btn-success" href="/login">Login</a>
+                <a class="btn btn-warning" href="/register">Register</a>
+            </form>
+            {% endif %}
         </div>
     </div>
 </div>
